Updated to include disconnect, delay and reconnectDelay

--- a/camel-sftp-app/src/main/resources/application.properties
+++ b/camel-sftp-app/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 camel.springboot.main-run-controller=true
 
-sftp.endpoint1=customSftp://localhost/input/1?delay=30s
+sftp.endpoint1=customSftp://localhost/input/1?delay=20s&reconnectDelay=1m
 sftp.endpoint2=customSftp://localhost/input/2?delay=30s
+sftp.endpoint3=customSftp://localhost/input/2/out?delay=30s
 
 sftp.username=sftp_user1_l
 sftp.password=xxxxxxxxxxxx
+sftp.disconnect=true
+sftp.delay=5m
+sftp.reconnectDelay=5m
+
+logging.level.org.apache.camel=INFO
 
